Fix panel top spacing

--- a/styles/ui/panel.module.scss
+++ b/styles/ui/panel.module.scss
@@ -4,8 +4,8 @@ $input-height: 52px;
 $spacing: 12px;
 $actions-top: 2 * $spacing + $input-height;
 $actions-height: 60px;
-$shell-top: $actions-top + $spacing;
-$shell-top-with-actions: $actions-height + $shell-top;
+$shell-top: $actions-top;
+$shell-top-with-actions: $actions-height + $shell-top + $spacing;
 $head-height: 36px;
 $panel-padding: 1.5 * $spacing;
 
